클론코딩 완료!!
-회원가입
-로그인 , 상품구매
-기본 ui

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -31,8 +31,12 @@
       <div>
         <button type="submit">회원가입</button>
       </div>
-      <div id="info" style="color: red"></div>
+      <div id="info"></div>
     </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
+    <script src="signup.js"></script>
+  </body>
+</html>    </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
     <script src="signup.js"></script>
   </body>
