--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>로그인</title>
   </head>
   <body>
-    <form id="signup-form" action="/signup" method="POST">
-      <div>로그인하기</div>
+    <form id="login-form" action="/signup" method="POST">
+      <div>로그인</div>
       <div>
         <label for="id">아이디</label>
         <input type="text" id="id" name="id" required />
@@ -19,7 +19,8 @@
       <div>
         <button type="submit">로그인</button>
       </div>
-      <div id="info"></div>
     </form>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
+  <script src="login.js"></script>
 </html>
