--- a/frontend/write.html
+++ b/frontend/write.html
@@ -3,33 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>글쓰기 페이지 입니다</title>
+    <title>글쓰기 페이지입니다.</title>
   </head>
-    <body>   
-        글쓰기
-  <form id="wirte-form">
-    <div>
-    <label for="image">이미지</label>
-    <input type="file" id="image" name="image">
-    </div>
-    <div>
-    <label for="title"">제목</label>
-    <input type="text"  id="title" name = "title">
-    </div> 
-    <label for="price">가격</label>
-    <input type="number" id="price" name="price">
-    <div>
-    <label for="description">설명</label>
-    <input type="text" id="description" name="description">
-    </div>
-    <div>
-    <label for="place">장소</label>
-    <input type="text" id="place" name="place">
-    </div>
-    <div>
-        <button type="submit">제출완료</button>
-    </div>
-  </form>
-  <script src="write.js"></script>
+  <body>
+    <form id="write-form">
+      <div>
+        <label for="image">이미지</label>
+        <input type="file" id="image" name="image" />
+      </div>
+
+      <div>
+        <label for="title">제목</label>
+        <input type="text" id="title" name="title" />
+      </div>
+      <div>
+        <label for="price">가격</label>
+        <input type="number" id="price" name="price" />
+      </div>
+      <div>
+        <label for="description">설명</label>
+        <input type="text" id="description" name="description" />
+      </div>
+      <div>
+        <label for="place">장소</label>
+        <input type="text" id="place" name="place" />
+      </div>
+      <div>
+        <button type="submit">저장</button>
+      </div>
+    </form>
+    <script src="write.js"></script>
   </body>
 </html>
